--- a/package.json
+++ b/package.json
@@ -1,4 +1,60 @@
 {
   "name": "backend",
-  "packageManager": "yarn@4.12.0"
+  "packageManager": "yarn@4.12.0",
+  "scripts": {
+    "build": "tsc",
+    "start": "nodemon src/server.ts",
+    "dev": "nodemon src/server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "serverless deploy",
+    "aws:configure": "open ~/.aws/credentials",
+    "gen:serverless:env": "node generate-serverless-env.js",
+    "gen:env": "node generate-env.js"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9",
+    "@types/mime-types": "^3",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^2",
+    "@types/node": "^25.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "nodemon": "^3.1.11",
+    "prettier": "^3.7.4",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.962.0",
+    "@aws-sdk/client-dynamodb": "^3.962.0",
+    "@aws-sdk/client-s3": "^3.962.0",
+    "@aws-sdk/client-ses": "^3.962.0",
+    "@aws-sdk/client-sns": "^3.962.0",
+    "@aws-sdk/client-sqs": "^3.962.0",
+    "@aws-sdk/lib-dynamodb": "^3.962.0",
+    "@aws-sdk/s3-presigned-post": "^3.962.0",
+    "@aws-sdk/s3-request-presigner": "^3.962.0",
+    "body-parser": "^2.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "lambda-multipart-parser": "^1.0.1",
+    "mime-types": "^3.0.2",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "openai": "^6.15.0",
+    "rss-parser": "^3.13.0",
+    "serverless-http": "^4.0.0",
+    "slugify": "^1.6.6",
+    "zod": "^4.3.4"
+  }
 }
