--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gen:env": "node generate-env.js"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.145",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
@@ -21,6 +22,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2",
     "@types/node": "^25.0.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
     "eslint": "^9.39.2",
@@ -46,6 +48,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.3",
     "lambda-multipart-parser": "^1.0.1",
     "mime-types": "^3.0.2",
@@ -55,6 +58,7 @@
     "rss-parser": "^3.13.0",
     "serverless-http": "^4.0.0",
     "slugify": "^1.6.6",
+    "uuid": "^11.0.5",
     "zod": "^4.3.4"
   }
 }
