--- a/.serverless/env.yaml
+++ b/.serverless/env.yaml
@@ -7,6 +7,7 @@ DYNAMODB_TOPICS_TABLE: ${self:service}-${sls:stage}-topics
 DYNAMODB_ARTICLES_TABLE: ${self:service}-${sls:stage}-articles
 DYNAMODB_NOTES_TABLE: ${self:service}-${sls:stage}-notes
 DYNAMODB_FIELDS_TABLE: ${self:service}-${sls:stage}-fields
+DYNAMODB_RSS_SOURCES_TABLE: ${self:service}-${sls:stage}-rss-sources
 
 EXPRESS_S3_APP_BUCKET: ${env:EXPRESS_S3_APP_BUCKET}
 EXPRESS_S3_TEMP_BUCKET: ${env:EXPRESS_S3_TEMP_BUCKET}
